<resources>
    <string name="app_name">Tennis Stats</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
    <string name="start_new">START NEW</string>
    <string name="player_1">Player 1</string>
    <string name="name">Enter Full Name</string>
    <string name="create_player">Create new player despite repetition</string>
    <string name="player_2">Player 2</string>
    <string name="start_game">START GAME</string>
    <string name="menu">MENU</string>
    <string name="_1st_serve">1st Serve</string>
    <string name="ace">Ace</string>
    <string name="return_winner_fh">Return Winner FH</string>
    <string name="return_error_fh">Return Error FH</string>
    <string name="return_error_bh">Return Error BH</string>
    <string name="return_winner_bh">Return Winner BH</string>
    <string name="fault">Fault</string>
    <string name="double_fault">Double Fault</string>
    <string name="ball_in_play">Ball In Play</string>
    <string name="i_m_already_signed_in">I\'m already signed in</string>
    <string name="tennis_stats">TENNIS STATS</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="enter_password">Enter password</string>
    <string name="login">LOGIN</string>
    <string name="log_in">Log in</string>
    <string name="i_m_not_signed_up">I\'m not signed up</string>
    <string name="who_serves_first">Who serves\nfirst?</string>
    <string name="log_out">LOG OUT</string>
    <string name="start_new_game">Start New Game</string>
    <string name="view_matches">View Matches</string>
    <string name="options">OPTIONS</string>
    <string name="end_of_match">END OF MATCH</string>
    <string name="view_stats">View Stats</string>
    <string name="winner">Winner</string>
    <string name="forced_error">Forced Error</string>
    <string name="unforced_error">Unforced Error</string>
    <string name="ground">GROUND</string>
    <string name="dropshot">DROPSHOT</string>
    <string name="smash">SMASH</string>
    <string name="lob">LOB</string>
    <string name="forehand">Forehand</string>
    <string name="backhand">Backhand</string>
    <string name="slice">SLICE</string>
    <string name="volley">VOLLEY</string>
    <string name="back_button">Back button</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="title_activity_view_show_more">ViewShowMoreActivity</string>
    <string name="title_activity_view_player">ViewPlayerActivity</string>
    <string name="player1_item">Player 1:</string>
    <string name="date_item">Date:</string>
    <string name="player2_item">Player 2:</string>
    <string name="player">Player</string>
    <string name="matches">Matches</string>
    <string name="search">Search</string>
    <string name="imie_nazwisko_player1">Imie Nazwisko Player1</string>
    <string name="imie_nazwisko_player2">Imie Nazwisko Player2</string>
    <string name="usermail">User Email</string>
    <string name="statistics">STATISTICS</string>
    <string name="history">HISTORY</string>
    <string name="all">ALL</string>
    <string name="set_1">SET 1</string>
    <string name="set_2">SET 2</string>
    <string name="set_3">SET 3</string>
    <string name="total_points">TOTAL POINTS</string>
    <string name="iloscpl1">iloscPL1</string>
    <string name="iloscpl2">iloscPL2</string>
    <string name="aces">ACES</string>
    <string name="return_winner">RETURN WINNER</string>
    <string name="fh">FOREHAND</string>
    <string name="double_faults">DOUBLE FAULTS</string>
    <string name="_1st_serve_in">1ST SERVE IN</string>
    <string name="_1in_all">1in/all (%)</string>
    <string name="_2nd_serve_in">2ND SERVE IN</string>
    <string name="_2in_all">2in/all (%)</string>
    <string name="bh">BACKHAND</string>
    <string name="return_error">RETURN ERROR</string>
    <string name="enter_nationality">Enter Nationality</string>
    <string name="select_date_of_birth">Select Date</string>
    <string name="enter_ranking">Enter Ranking</string>
    <string name="enter_strength">Enter Strength</string>
    <string name="enter_weakness">Enter Weakness</string>
    <string name="nationality">Nationality:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="ranking">Ranking:</string>
    <string name="strength">Strength:</string>
    <string name="weakness">Weakness:</string>
    <string name="submit">Submit</string>
    <string name="decision">WHAT DO YOU WANT TO DO</string>
    <string name="resume_match">Resume Match</string>
    <string name="first_serve">1st Serve</string>
    <string name="second_serve">2st Serve</string>
    <string name="user_email">user_email@smth.com</string>
    <string name="add_player">Add Player</string>
    <string name="enter_name">Name:</string>
    <string name="left_handed">left-handed</string>
    <string name="right_handed">right-handed</string>
    <string name="delete">Delete</string>
    <string name="deletePlayer">DELETE PLAYER</string>
    <string name="delete_match">Delete Match</string>
    <string name="deleteInfo">Do you want to delete match?</string>
    <string name="deleteInfoP">Do you want to delete player?</string>
    <string name="h2h">Head 2 Head</string>
    <string name="enter_player1">Enter Player 1</string>
    <string name="enter_player2">Enter Player 2</string>
    <string name="matches_won">MATCHES WON</string>
    <string name="scores">SCORES</string>
    <string name="select_player1">Select Player1</string>
    <string name="select_player2">Select Player2</string>
    <string name="choose_team">Choose a group</string>
    <string name="plus">+</string>
    <string name="add_new_team">+ Add new group</string>
    <string name="add_to_team">Add a player to the group</string>
    <string name="plus_add_to_team">+ Add a player to the group</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="d_add_player_to_team">Would you like to add a player to your group?</string>
    <string name="d_add_player_to_favorite">Would you like to add a player to your favorites?</string>
    <string name="hint_team">Enter team name</string>
    <string name="finished">Finished</string>
    <string name="inprogress">In progress</string>
    <string name="team">Team:</string>
    <string name="edit_team">Edit team name</string>
    <string name="delete_team">Delete team</string>
    <string name="delete_player">Delete player from team</string>
    <string name="error_empty_name">Error  - empty name</string>
    <string name="deleteTeam">Do you want to delete group?</string>
    <string name="deletePlayerFromTeam">Do you want to delete player from group?</string>
    <string name="choose_player">Choose players</string>
    <string name="enter_team">Enter new group</string>
    <string name="change">Change</string>
    <string name="enter_team_name">Enter team name</string>
    <string name="change_group_name">Change group name</string>
    <string name="no_players_found">No Players found</string>
    <string name="no_tournaments_found">No Tournaments found</string>
    <string name="add_tournament">Add Tournament</string>
    <string name="venue">Venue:</string>
    <string name="enter_venue">Enter Venue</string>
    <string name="country">Country:</string>
    <string name="enter_country">Enter Country</string>
    <string name="date">Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="select_end_date">Select End Date</string>
    <string name="surface">Surface:</string>
    <string name="enter_surface">Enter Surface</string>
    <string name="enrolled_players">Enrolled Players:</string>
    <string name="add_to_tournament">Add player to the tournament</string>
    <string name="tournament_name">Tournament name</string>
    <string name="tournament_place">Tournament place</string>
    <string name="filters">Filters</string>
    <string name="add_new_filter">+ Add new filter</string>
    <string name="show_draw">Show Draw</string>
    <string name="add_players">Add Players</string>
    <string name="show_details">Show Details</string>
    <string name="deleteTournamentInfo">Do you want to delete tournament?</string>
    <string name="entry_list">Entry List</string>
    <string name="draw_size">Draw Size</string>
    <string name="enter_draw_size">Enter Draw Size</string>
    <string name="no_draw_found">No draw found\nCreate a draw by clicking button below</string>
    <string name="play_new_match">Play new match</string>
    <string name="add_from_matches">Add from matches</string>
    <string name="attach_match_sure">Would you like to attach this match?</string>
    <string name="remove_player">Remove Player from tournament</string>
    <string name="short_summary">Short Summary</string>
    <string name="change_details">CHANGE DETAILS</string>
    <string name="player_name">Player name</string>
    <string name="score">Score:</string>
    <string name="reject">Reject</string>
    <string name="match_summary">Match Summary</string>
    <string name="additional_note">Additional note</string>
    <string name="save">Save</string>
    <string name="enter_your_additional_notes">Enter your additional notes</string>
    <string name="edit_details">EDIT DETAILS</string>
    <string name="walkover">Walkover</string>
    <string name="retired">Retired</string>
    <string name="score_unknown">Score\nUnknown</string>
    <string name="submit_changes">Submit changes</string>
    <string name="attach_match">Attach match</string>
    <string name="alert">Your changes might need owner\'s permission to change</string>
    <string name="ok">OK</string>
    <string name="add_event">Add Event</string>
    <string name="list_of_tournaments">List Of Tournaments</string>
    <string name="list_of_events">List Of Events</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="only_my_tournaments">Only my tournaments</string>
    <string name="all_tournaments">All tournaments</string>
    <string name="eventDelete">Do you want to delete this event?</string>


</resources>