<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerDetailsActivity"
    tools:ignore="HardCodedText">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:text="Player Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName"
        app:layout_constraintVertical_bias="0.100000024">

        <LinearLayout
            android:id="@+id/linearLayoutNationality"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:textColor="@color/white" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewNationality"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_nationality"
                android:textColor="@color/white"
                android:textColorHint="@color/app_hint_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutBDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/select_date_of_birth"
                android:inputType="date"
                android:textColor="@color/white"
                android:textColorHint="@color/app_hint_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutRanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextRanking"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_ranking"
                android:textColor="@color/white"
                android:textColorHint="@color/app_hint_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutStrength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                android:textColor="@color/white" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewStrength"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_strength"
                android:textColor="@color/white"
                android:textColorHint="@color/app_hint_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutWeakness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weakness"
                android:textColor="@color/white" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewWeakness"
                android:layout_width="215dp"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:backgroundTint="@color/white"
                android:hint="@string/enter_weakness"
                android:textColor="@color/white"
                android:textColorHint="@color/app_hint_color" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextViewWeakness"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>