<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityServe">

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button"
        android:text="@string/menu"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:shapeAppearance="@style/CardView"/>

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:background="@drawable/rectangle_button"
        android:contentDescription="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <LinearLayout
        android:id="@+id/linearLayoutServe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409">

        <TextView
            android:id="@+id/textViewServe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/who_serves_first"
            android:textAlignment="center"
            android:textColor="@color/app_mainTitles_color"
            android:textSize="45sp"/>

        <Button
            android:id="@+id/buttonPlayer1"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="17sp"
            android:text="@string/imie_nazwisko_player1"/>
        <Button
            android:id="@+id/buttonPlayer2"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:text="@string/imie_nazwisko_player2"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>