<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dialog_bg_color">

    <TextView
        android:id="@+id/textViewConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_gravity="center"
        android:text="@string/remove_player"
        android:textColor="@color/dialog_textTitle_color"
        android:textSize="@dimen/_23sdp"
        android:textAlignment="center"/>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_11sdp"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/_99sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginEnd="@dimen/_7sdp"
            android:background="@drawable/border_button"
            android:text="@string/cancel"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/dialog_btnCancel"/>

        <Button
            android:id="@+id/buttonDeletePlayer"
            android:layout_width="@dimen/_99sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_toEndOf="@+id/buttonCancel"
            android:backgroundTint="@color/dialog_textTitle_color"
            android:text="@string/delete"
            android:textColor="@color/dialog_text_color"
            android:textSize="@dimen/_14ssp"  />
    </RelativeLayout>
</LinearLayout>