<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/app_bg_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/app_mainTitles_color"
            android:textSize="@dimen/_30ssp"
            android:gravity="center"/> <!--Login-->

        <EditText
            android:id="@+id/textEmailSignIn"
            android:layout_width="@dimen/_232sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_46sdp"
            android:textSize="@dimen/_14sdp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/autoFill_field"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="@dimen/_4sdp"
            android:drawableTint="@color/app_hint_color"
            android:ems="10"
            android:hint="@string/enter_e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/autoFill_field"
            android:textColorHint="@color/app_hint_color" /> <!--e-mail-->

        <EditText
            android:id="@+id/textPasswordSignIn"
            android:layout_width="@dimen/_232sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:textSize="@dimen/_14sdp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/icon_password"
            android:drawablePadding="@dimen/_4sdp"
            android:drawableTint="@color/app_hint_color"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/autoFill_field"
            android:textColorHint="@color/app_hint_color" /> <!--password-->

        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/log_in"
            android:backgroundTint="@color/darker_blue"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" /> <!--log in-->

        <TextView
            android:id="@+id/textNotSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/i_m_not_signed_up"
            android:textColor="@color/accent_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintVertical_bias="0" /> <!--sign up-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>